syntax = "proto3";
package dogmatiq.enginekit.enginetest;

option go_package = "github.com/dogmatiq/enginekit/enginetest/internal/testapp";

import "github.com/dogmatiq/enginekit/enginetest/internal/action/action.proto";

message ProcessEventA {
  string instance_id = 1;
  repeated Action actions = 2;
}
